--- a/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/GUI/MainView/GetClientViewController.xib
+++ b/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/GUI/MainView/GetClientViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GetClientViewController">
             <connections>
+                <outlet property="remberBtn" destination="YZg-9r-zVs" id="iEh-64-LSS"/>
                 <outlet property="tableView" destination="RuH-rh-0uc" id="Gcw-18-k1O"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -20,8 +21,16 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_logo.png" highlightedImage="login_logo.png" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b8x-7v-ZBt" userLabel="log">
-                    <rect key="frame" x="122.5" y="40" width="130" height="38"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sFM-XA-O1R">
+                    <rect key="frame" x="329" y="30" width="41" height="36"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="帮助"/>
+                    <connections>
+                        <action selector="apphelp:" destination="-1" eventType="touchUpInside" id="Y8G-ja-3BC"/>
+                    </connections>
+                </button>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_logo.png" highlightedImage="login_logo.png" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b8x-7v-ZBt" userLabel="log background view">
+                    <rect key="frame" x="123" y="40" width="130" height="38"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="130" id="USb-1N-syi"/>
@@ -41,7 +50,7 @@
                     </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W61-ZV-FEX">
-                    <rect key="frame" x="20" y="236" width="335" height="40"/>
+                    <rect key="frame" x="20" y="286" width="335" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Qn2-X5-ZNx"/>
                     </constraints>
@@ -51,32 +60,59 @@
                         <action selector="getClientIDList:" destination="-1" eventType="touchUpInside" id="wQa-uZ-SSn"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sFM-XA-O1R">
-                    <rect key="frame" x="329" y="30" width="41" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <state key="normal" title="帮助"/>
-                    <connections>
-                        <action selector="apphelp:" destination="-1" eventType="touchUpInside" id="Y8G-ja-3BC"/>
-                    </connections>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t4e-S3-ZvT" userLabel="check View">
+                    <rect key="frame" x="0.0" y="226" width="375" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CHj-2o-Of4">
+                            <rect key="frame" x="32" y="12" width="58" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YZg-9r-zVs">
+                            <rect key="frame" x="95" y="5" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="lIo-s3-8kZ"/>
+                                <constraint firstAttribute="width" constant="30" id="wRI-80-wMl"/>
+                            </constraints>
+                            <state key="normal" title="Button" image="checkbox_on.png"/>
+                            <state key="highlighted" image="checkbox_on.png"/>
+                            <connections>
+                                <action selector="remeberPwd:" destination="-1" eventType="touchUpInside" id="fKX-Oq-Q5j"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="YZg-9r-zVs" firstAttribute="leading" secondItem="CHj-2o-Of4" secondAttribute="trailing" constant="5" id="5eD-EO-I1Q"/>
+                        <constraint firstItem="CHj-2o-Of4" firstAttribute="leading" secondItem="t4e-S3-ZvT" secondAttribute="leading" constant="32" id="Mu9-v8-CqQ"/>
+                        <constraint firstItem="CHj-2o-Of4" firstAttribute="centerY" secondItem="t4e-S3-ZvT" secondAttribute="centerY" id="czI-oq-BMe"/>
+                        <constraint firstItem="YZg-9r-zVs" firstAttribute="centerY" secondItem="t4e-S3-ZvT" secondAttribute="centerY" id="d3y-y6-nrd"/>
+                        <constraint firstAttribute="height" constant="40" id="ukP-Fa-aoQ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="b8x-7v-ZBt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="1lN-S6-L9s"/>
-                <constraint firstItem="W61-ZV-FEX" firstAttribute="top" secondItem="RuH-rh-0uc" secondAttribute="bottom" constant="20" id="2Bh-tX-3PX"/>
                 <constraint firstAttribute="trailing" secondItem="W61-ZV-FEX" secondAttribute="trailing" constant="20" id="7h2-L9-vLF"/>
                 <constraint firstAttribute="trailing" secondItem="sFM-XA-O1R" secondAttribute="trailing" constant="5" id="AfC-ce-dLU"/>
                 <constraint firstItem="b8x-7v-ZBt" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="TuQ-Vj-aPX"/>
                 <constraint firstAttribute="trailing" secondItem="RuH-rh-0uc" secondAttribute="trailing" constant="20" id="UwM-mP-6Vh"/>
+                <constraint firstItem="t4e-S3-ZvT" firstAttribute="top" secondItem="RuH-rh-0uc" secondAttribute="bottom" constant="10" id="dkt-KL-zmF"/>
                 <constraint firstItem="RuH-rh-0uc" firstAttribute="top" secondItem="b8x-7v-ZBt" secondAttribute="bottom" constant="10" id="hsz-hu-TQx"/>
+                <constraint firstItem="t4e-S3-ZvT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="igS-jl-d4d"/>
+                <constraint firstItem="W61-ZV-FEX" firstAttribute="top" secondItem="t4e-S3-ZvT" secondAttribute="bottom" constant="20" id="nMH-gW-woO"/>
                 <constraint firstItem="RuH-rh-0uc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="uJl-Mb-GtE"/>
                 <constraint firstItem="sFM-XA-O1R" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="30" id="upM-p7-UOg"/>
+                <constraint firstAttribute="trailing" secondItem="t4e-S3-ZvT" secondAttribute="trailing" id="xed-ub-bZK"/>
                 <constraint firstItem="W61-ZV-FEX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zqo-EO-e2m"/>
             </constraints>
             <point key="canvasLocation" x="-381" y="15"/>
         </view>
     </objects>
     <resources>
+        <image name="checkbox_on.png" width="72" height="72"/>
         <image name="login_enable.png" width="293" height="40"/>
         <image name="login_logo.png" width="260" height="76"/>
         <image name="login_unenable.png" width="293" height="40"/>
