--- a/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/GUI/Main/LoginViewController.xib
+++ b/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/GUI/Main/LoginViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="remberBtn" destination="YZg-9r-zVs" id="iEh-64-LSS"/>
                 <outlet property="tableView" destination="RuH-rh-0uc" id="Gcw-18-k1O"/>
+                <outlet property="versionLabel" destination="X17-SK-cXz" id="app-7c-bvl"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -91,6 +92,12 @@
                         <constraint firstAttribute="height" constant="40" id="ukP-Fa-aoQ"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X17-SK-cXz">
+                    <rect key="frame" x="169" y="629" width="37.5" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -100,12 +107,14 @@
                 <constraint firstItem="b8x-7v-ZBt" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="TuQ-Vj-aPX"/>
                 <constraint firstAttribute="trailing" secondItem="RuH-rh-0uc" secondAttribute="trailing" constant="20" id="UwM-mP-6Vh"/>
                 <constraint firstItem="t4e-S3-ZvT" firstAttribute="top" secondItem="RuH-rh-0uc" secondAttribute="bottom" constant="10" id="dkt-KL-zmF"/>
+                <constraint firstAttribute="bottom" secondItem="X17-SK-cXz" secondAttribute="bottom" constant="20" id="giE-1y-K2O"/>
                 <constraint firstItem="RuH-rh-0uc" firstAttribute="top" secondItem="b8x-7v-ZBt" secondAttribute="bottom" constant="10" id="hsz-hu-TQx"/>
                 <constraint firstItem="t4e-S3-ZvT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="igS-jl-d4d"/>
                 <constraint firstItem="W61-ZV-FEX" firstAttribute="top" secondItem="t4e-S3-ZvT" secondAttribute="bottom" constant="20" id="nMH-gW-woO"/>
                 <constraint firstItem="RuH-rh-0uc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="uJl-Mb-GtE"/>
                 <constraint firstItem="sFM-XA-O1R" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="30" id="upM-p7-UOg"/>
                 <constraint firstAttribute="trailing" secondItem="t4e-S3-ZvT" secondAttribute="trailing" id="xed-ub-bZK"/>
+                <constraint firstItem="X17-SK-cXz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="zhj-Fk-PMc"/>
                 <constraint firstItem="W61-ZV-FEX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="zqo-EO-e2m"/>
             </constraints>
             <point key="canvasLocation" x="-381" y="15"/>
