--- a/android/flyRTC/app/src/main/res/values/colors.xml
+++ b/android/flyRTC/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorListNor">#ffffff</color>
+    <color name="colorListPress">#e0e0e0</color>
 </resources>
