--- a/android/flyRTC/app/src/main/res/layout/activity_select.xml
+++ b/android/flyRTC/app/src/main/res/layout/activity_select.xml
@@ -1,73 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f5f5f5">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dip"
-        android:paddingStart="10dip"
-        android:paddingEnd="10dip"
-        android:clickable="false"
-        android:gravity="center_vertical"
-        android:text="@string/login_select"
-        android:textColor="#414141"
-        android:background="#ffffff"
-        android:textSize="22sp"
-        android:visibility="gone"/>
+    android:background="#f5f5f5"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:gravity="center"
         android:orientation="horizontal">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
 
-        <CheckBox
-            android:id="@+id/old_btn"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/app_sr"
-            android:layout_gravity="center"
-            android:button="@drawable/login_list_selector" />
-
-        <CheckBox
-            android:id="@+id/new_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/app_can"
-            android:layout_gravity="center"
-            android:button="@drawable/login_list_selector" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:gravity="center"
+            android:textColor="#000000"
+            android:text="@string/app_can" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:background="#67b83d"/>
+        android:layout_height="2dp"
+        android:background="#67b83d" />
 
     <ListView
         android:id="@+id/login_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:dividerHeight="1dp"
         android:divider="#ececec"
+        android:dividerHeight="1dp"
         android:fadingEdge="none"
         android:footerDividersEnabled="true"
         android:listSelector="#00000000"
         android:scrollbars="vertical"
-        android:transcriptMode="normal" >
+        android:transcriptMode="normal">
     </ListView>
 
     <LinearLayout
@@ -75,17 +43,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:gravity="bottom" >
+        android:focusable="false"
+        android:gravity="bottom">
 
         <TextView
             android:id="@+id/login_client_bt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clickable="false"
-            android:gravity="center"
             android:background="#58b727"
+            android:gravity="center"
             android:text="@string/login_client"
             android:textColor="#ffffff"
             android:textSize="22sp" />
-    </LinearLayout >
+    </LinearLayout>
 </LinearLayout>
